updated to mra 1.07.1

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 .rmv/logs/backup/rocket_mv_basic_language_server.2023-10-13-1.log
 .rmv/logs/backup/rocket_mv_basic_language_server.2023-10-14-1.log
 .rmv/logs/backup/rocket_mv_basic_language_server.2023-10-21-1.log
+.rmv/logs/backup/rocket_mv_basic_language_server.2023-10-28-1.log
